# app_shell_bt

./: CMakeLists.txt  README.md  ozone_nrf52832.jdebug  prj.conf
src/: app_cmds.c  main.c
